content/static: fix main page section targets
Updates styles for main page sections to fix
target link click. This makes sure the content
appears below the fixed header when target links
are clicked.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/261500
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/content/static/css/unit_directories.css
+++ b/content/static/css/unit_directories.css
@@ -7,17 +7,8 @@
 .UnitDirectories {
   margin-bottom: 2rem;
 }
-.UnitDirectories::before {
-  content: '';
-  display: block;
-  position: relative;
-  width: 0;
-  height: 3.5rem;
-  margin-top: -3.5rem;
-}
 .UnitDirectories-title {
   border-bottom: 0.0625rem solid var(--gray-8);
-  display: flex;
   font-size: 1.375rem;
   margin: 0.5rem 0 0 0;
   padding-bottom: 1rem;
