--- a/content/static/css/unit_doc.css
+++ b/content/static/css/unit_doc.css
@@ -10,17 +10,8 @@
 .UnitDoc {
   margin-bottom: 2rem;
 }
-.UnitDoc::before {
-  content: '';
-  display: block;
-  position: relative;
-  width: 0;
-  height: 3.5rem;
-  margin-top: -3.5rem;
-}
 .UnitDoc-title {
   border-bottom: 0.0625rem solid var(--gray-8);
-  display: flex;
   font-size: 1.375rem;
   margin: 0.5rem 0 0 0;
   padding-bottom: 1rem;
