--- a/content/static/css/unit_readme.css
+++ b/content/static/css/unit_readme.css
@@ -7,17 +7,8 @@
 .UnitReadme {
   margin-bottom: 2rem;
 }
-.UnitReadme::before {
-  content: '';
-  display: block;
-  position: relative;
-  width: 0;
-  height: 3.5rem;
-  margin-top: -3.5rem;
-}
 .UnitReadme-title {
   border-bottom: 0.0625rem solid var(--gray-8);
-  display: flex;
   font-size: 1.375rem;
   margin: 0.5rem 0 0 0;
   padding-bottom: 1rem;
